<?xml version="1.0" encoding="utf-8"?>
<!-- SugarGallery - Bottom Navigation Menu -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_all"
        android:icon="@drawable/ic_grid"
        android:title="@string/all_media" />

    <item
        android:id="@+id/nav_photos"
        android:icon="@drawable/ic_photo"
        android:title="@string/photos" />

    <item
        android:id="@+id/nav_videos"
        android:icon="@drawable/ic_video"
        android:title="@string/videos" />

    <item
        android:id="@+id/nav_favorites"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorites" />

    <item
        android:id="@+id/nav_folders"
        android:icon="@drawable/ic_folder"
        android:title="@string/folders" />

</menu>
